Added telemetry to nomad, and update pipelines to pull in secret for it

--- a/server_setup/roles/nomad/templates/nomad.hcl.j2
+++ b/server_setup/roles/nomad/templates/nomad.hcl.j2
@@ -41,3 +41,10 @@ plugin "docker" {
     }
   }
 }
+
+telemetry {
+  publish_allocation_metrics = true
+  publish_node_metrics       = true
+
+  datadog_address = "{{ datadog_uri }}"
+}
